<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WHMainActivity!</string>
    <string name="app_name">Work&amp;Home</string>
    
    <string name="title_section_activity">Section</string>
    <string name="title_home_activity">Sections</string>
    <string name="title_section_settings_activity">Sections</string>
    
    <string name="title_time_activity">Time</string>
    <string name="title_wifi_activity">Wifi</string>
    <string name="title_gps_activity">GPS</string>
    
    
    
    <!-- Messages -->
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s geofence(s) %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>

    <!-- Number patterns -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    
    
    <string name="connection_error_misconfigured">Connection misconfigure</string>
    <string name="connection_error_internal">Internal connection error</string>
    <string name="connection_error_invalid_account">Invalid accaunt</string>
    <string name="connection_error_license_check_failed">License check failed</string>
    <string name="connection_error_network">Network error</string>
    <string name="connection_error_needs_resolution">Connection nneed resolution</string>
    <string name="connection_error_disabled">Connection disabled</string>
    <string name="connection_error_invalid">Invalid connection</string>
    <string name="connection_error_missing">Connection missing</string>
    <string name="connection_error_outdated">Connection outdated</string>
    <string name="connection_error_sign_in_required">Sign in required</string>
    <string name="connection_error_unknown">Connection unknow error</string>
    
    <!-- APP LOCALIZATION -->
    <string name="gps">GPS</string>
    <string name="wifi">Wifi</string>
    <string name="time">Time</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="status_click_to_start">Click to start</string>
    <string name="status_pending">Pending</string>   
    <string name="status_in_progress">In progress</string> 
    <string name="manage_calls">Calls</string> 
    <string name="sms_autoresponder">Sms </string>
    <string name="socail">Social</string>
    <string name="manage_mail">Mail</string>
    <string name="audio_profile">Audio</string>
    <string name="vibration">Vibration</string>
    <string name="brightness">Brightness</string>
    <string name="battery_alert">Battery</string>
    <string name="managing_calls">Managing calls</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="mobile_data">Mobile data</string>
    
    <string name="widget">Widget</string>
    <string name="trigger">Trigger</string>
    <string name="raports">Raports</string>
    <string name="Settings">Settings</string>
    
    <string name="pick_location">Pick location</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_wifi"> Pick a wifi spot associated with this place/activity</string>
    <string name="tracking"> Tracking</string>
    
    <string name="manage_incoming_calls">Manage incoming calls</string>
    
    
    
    
</resources>