<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <LinearLayout
          android:layout_width="fill_parent"
          android:background="#CCCCCC"
          android:layout_height="0px"
          android:layout_weight="1.5"
          android:orientation="horizontal" >

           <Button
               android:id="@+id/showBarButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/work_main_section_view_show_bar"/>
           <LinearLayout
               android:id="@+id/optionsBar"
               android:layout_width="fill_parent"
               android:background="#112C4C"
               android:layout_height="fill_parent"
               android:orientation="horizontal" >
                   <Button
                       android:id="@+id/barGPSButton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/work_main_section_view_gps_off"/>
                   <Button
                       android:id="@+id/barWifiButton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/work_main_section_view_wifi_off"/>
                   <Button
                       android:id="@+id/barTimeButton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="@drawable/work_main_section_view_time_off"/>
           </LinearLayout>
      </LinearLayout>
      
      <!-- Middle pane with circle view -->
      <LinearLayout 
          android:layout_width="fill_parent"
          android:background="#AACCAA"
          android:layout_height="0px"
          android:layout_weight="3.5"
          android:orientation="vertical" >
          <com.ros.workandhome.activities.views.WHCircleView
            android:id="@+id/section_circle_view"
            android:background="@drawable/work_section_icon"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
          <TextView
            android:text="@string/status_click_to_start"
            android:textColor="#000000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:gravity="center"/>
      </LinearLayout>
      
      
      <!-- Bottom pain of three rows settings buttons -->
      <RelativeLayout 
          android:layout_width="fill_parent"
          android:background="#333333"
          android:layout_height="0px"
          android:layout_weight="5"
          android:orientation="vertical" >
          
          <!--  Bottom strip of button 1 -->
          <LinearLayout 
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:background="#333333"
                android:baselineAligned="false"
                android:id="@+id/pane1"
                android:layout_height="wrap_content" >
                      <LinearLayout 
                            android:background="#333333"
                            android:layout_width="0px"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:layout_height="wrap_content" >
                          <Button
                              android:id="@+id/manageCallsButton"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:background="@drawable/work_main_section_view_manage_call_off"
                              android:layout_gravity="center_horizontal" />
                             <TextView
                                 android:text="@string/manage_calls"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/smsAutoResponderButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_sms_autoresponder_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/sms_autoresponder"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/socialButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_social_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/socail"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/mailButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_mail_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/manage_mail"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
          </LinearLayout>
          
          
          
          
          <!--  Bottom strip of buttons 2 -->
          
          <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="#2600AA"
                android:layout_below="@id/pane1"
                android:orientation="horizontal"
                android:id="@+id/pane2">
                    <LinearLayout 
                            android:layout_width="0px"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:layout_height="wrap_content" >
                          <Button
                              android:id="@+id/audioProfileButton"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:background="@drawable/work_main_section_view_audio_0"
                              android:layout_gravity="center_horizontal" />
                             <TextView
                                 android:text="@string/audio_profile"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="-8dp" 
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/vibrationButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_vibration_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/vibration"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/brightnessButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_brightness_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/brightness"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="-8dp" 
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/batteryAlertButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_battery_alert_off" 
                               android:layout_gravity="center_horizontal"/>
                             <TextView
                                 android:text="@string/battery_alert"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="-8dp" 
                                 android:gravity="center"/>
                       </LinearLayout>
         </LinearLayout>
         
          
          
          
          
         <!--  Bottom strip of buttons 3 -->
         <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4A0092"
                android:layout_below="@id/pane2"
                android:orientation="horizontal" 
                android:baselineAligned="false">
                 <LinearLayout 
                            android:layout_width="0px"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:layout_height="wrap_content" >
                          <Button
                              android:id="@+id/wifiButton"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:background="@drawable/work_main_section_view_wifi_off"
                              android:layout_gravity="center_horizontal" />
                          <TextView
                                 android:text="@string/wifi"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/bluetoothButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_bluetooth_off" 
                               android:layout_gravity="center_horizontal"/>
                           <TextView
                                 android:text="@string/bluetooth"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content" 
                                 android:layout_marginTop="-8dp"
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/gpsButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_gps_off" 
                               android:layout_gravity="center_horizontal"/>
                           <TextView
                                 android:text="@string/gps"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="-8dp" 
                                 android:gravity="center"/>
                       </LinearLayout>
                       
                       <LinearLayout 
                            android:orientation="vertical"
                            android:layout_height="wrap_content" 
                            android:layout_width="0px"
                            android:layout_weight="2">
                           <Button
                               android:id="@+id/mobileDataButton"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:background="@drawable/work_main_section_view_mobile_data_off" 
                               android:layout_gravity="center_horizontal"/>
                           <TextView
                                 android:text="@string/mobile_data"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="-8dp" 
                                 android:gravity="center"/>
                       </LinearLayout>
         </LinearLayout>
         
    </RelativeLayout>
</LinearLayout>
